completing project section & portfolio1 overflow x fix

--- a/frontend/src/app/portfolio1/expertise-section/expertise-section.component.scss
+++ b/frontend/src/app/portfolio1/expertise-section/expertise-section.component.scss
@@ -119,10 +119,14 @@
 		margin:0;
 		width:100%;
 	}
+	.ryker_tm_services .left {
+		margin: 0
+	}
 	.ryker_tm_services .right ul{
 		max-width:90vw;
 		width:fit-content;
 		justify-content: space-around;
+		margin:0;
 		margin-top: 50px;
 		li{
 			padding:0;
